fix stretched images in gallery section

--- a/main.css
+++ b/main.css
@@ -520,6 +520,7 @@
 .gallery__item img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
   transition: all 0.5s;
 }
 .gallery__item__overlay {
